# nump

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Matrix.hpp  solve.hpp  utils.hpp
src/: Matrix.cpp  main.cpp  solve.cpp  utils.cpp
test/: test.cpp
